# bw_processing

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  CHANGELOG.md  CHANGES.md  CONTRIBUTING.md  MANIFEST.in  README.md  appveyor.yml  azure-pipelines.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: python-package-deploy.yml  python-test.yml
bw_processing/: __init__.py  array_creation.py  calculation_package.py  constants.py  datapackage.py  errors.py  filesystem.py  indexing.py  io_classes.py  io_helpers.py  io_parquet_helpers.py  io_pyarrow_helpers.py  load_package.py  loading.py  matrix_entry.py  merging.py  processed_package.py  proxies.py  unique_fields.py  utils.py  version.py
bw_processing/examples/: __init__.py  parquet_files.py
bw_processing/examples/datapackage_1/: another name.indices.parquet  datapackage.json  sa-data-vector-from-dict.data.parquet  sa-data-vector-from-dict.distributions.parquet  sa-data-vector-from-dict.flip.parquet  some name.data.parquet
ci/: conda_upload.sh  meta.yaml  test-requirements.txt
dev/: Parquet speed testing.ipynb  Presamples generator example.ipynb  Processed data package demo.ipynb  calculation_package.py  loading.py  processed_package.py  resources.py  speed_tests.py
dev/generator_metadata/: datapackage.json  infinite-data-indices.npy  infinite-data-meta.csv
docs/: conf.py  index.md  index.rst  loading.rst  requirements.txt  saving.rst  usage.md  utilities.rst
docs/content/: loading.md  saving.md  utilities.md
src/bw_processing/: __init__.py  array_creation.py  constants.py  datapackage.py  indexing.py  io_helpers.py  io_parquet_helpers.py  matrix_entry.py  merging.py  unique_fields.py  utils.py
src/bw_processing/examples/: interfaces.py
tests/: array_creation.py  basic.py  calculation_package.py  conftest.py  datapackage.py  filesystem.py  filtered_datapackage.py  indexing.py  integration.py  interfaces.py  io_classes.py  io_parquet_helpers.py  io_parquet_helpers_with_options.py  io_pyarrow_helpers.py  loading.py  merging.py  processed_package.py  proxies.py  test_datapackage.py  test_filtered_datapackage.py  test_integration.py  test_io_parquet_helpers.py  test_matrix_entry.py  test_unique_fields.py  test_utils.py  unique_fields.py
tests/fixtures/: array.npy  basic_array.npy  basic_arrays.py  create_lorem_file.py
tests/fixtures/indexing/: array.indices.npy  datapackage.json  sa-data-array.flip.npy  sa-data-vector-csv-both.csv  sa-data-vector.data.npy
tests/helpers/: __init__.py  basic_array_helpers.py
(+13 files in other folders)
